instance role for my tailscale box

--- a/infra/servers/CFN_sg_public_ssh.yml
+++ b/infra/servers/CFN_sg_public_ssh.yml
@@ -6,6 +6,9 @@ Resources:
     Properties:
       GroupName: public-ssh-access
       GroupDescription: Allow SSH inbound traffic
+      Tags:
+      - Key: Name
+        Value: public-ssh-access
       SecurityGroupIngress:
         - IpProtocol: tcp
           FromPort: 22
