fix the layout and csp headers

--- a/projects/0xcafe/Makefile
+++ b/projects/0xcafe/Makefile
@@ -7,6 +7,7 @@ build: docker-push-cafetech
 .PHONY: docker-build-% docker-push-% create-ecr-repo-%
 
 docker-build-%:
+	pipenv run css
 	@if ! docker image inspect $(DOCKER_IMAGE_BASE)/staging/$*:$(HASH) > /dev/null; then \
 		echo "Building Docker image $*..."; \
 		docker build --progress plain -t $(DOCKER_IMAGE_BASE)/staging/$*:$(HASH) -f $*.dockerfile .; \
