--- a/infra/clusters/CFN_ecs_cafetech.yml
+++ b/infra/clusters/CFN_ecs_cafetech.yml
@@ -35,6 +35,9 @@ Resources:
       TaskDefinition: !Ref ECSTaskDefinition
       LaunchType: EC2
       DesiredCount: 1
+      PlacementStrategies:
+      - Field: MEMORY
+        Type: binpack
       LoadBalancers:
       - ContainerName: cafetech
         ContainerPort: 8080
