--- a/infra/clusters/CFN_ecs_prod.yml
+++ b/infra/clusters/CFN_ecs_prod.yml
@@ -6,6 +6,17 @@ Resources:
     Type: AWS::ECS::Cluster
     Properties:
       ClusterName: prod
+      CapacityProviders:
+      - prod-capacityprovider
+
+  ECSClusterCapProviderAssoc:
+    Type: AWS::ECS::ClusterCapacityProviderAssociations
+    Properties:
+      CapacityProviders: 
+        - prod-capacityprovider
+      Cluster: prod
+      DefaultCapacityProviderStrategy: 
+      - CapacityProvider: prod-capacityprovider
 
 Outputs:
   ClusterName:
