--- a/infra/servers/CFN_asg_tailscale.yml
+++ b/infra/servers/CFN_asg_tailscale.yml
@@ -25,7 +25,7 @@ Resources:
     Type: AWS::EC2::LaunchTemplate
     Properties:
       LaunchTemplateData:
-        ImageId: ami-03ba386fab56f6932
+        ImageId: resolve:ssm:/amis/tailscale
         InstanceType: t4g.micro
         IamInstanceProfile:
           Arn: !Sub "arn:aws:iam::${AWS::AccountId}:instance-profile/tailscale"
