--- a/infra/servers/CFN_asg_tailscale.yml
+++ b/infra/servers/CFN_asg_tailscale.yml
@@ -50,6 +50,10 @@ Resources:
           Tags: 
             - Key: Name
               Value: tailscale
+        - ResourceType: volume
+          Tags:
+            - Key: Name
+              Value: tailscale
         BlockDeviceMappings:
         - DeviceName: /dev/sda1
           Ebs: 
