--- a/infra/servers/CFN_sg_public_ssh.yml
+++ b/infra/servers/CFN_sg_public_ssh.yml
@@ -9,8 +9,8 @@ Resources:
       Tags:
       - Key: Name
         Value: public-ssh-access
-      SecurityGroupIngress:
-        - IpProtocol: tcp
-          FromPort: 22
-          ToPort: 22
-          CidrIp: 0.0.0.0/0
+      # SecurityGroupIngress:
+      #   - IpProtocol: tcp
+      #     FromPort: 22
+      #     ToPort: 22
+      #     CidrIp: 0.0.0.0/0
