--- a/infra/amis/github_scripts/shutdown.service
+++ b/infra/amis/github_scripts/shutdown.service
@@ -1,18 +1,17 @@
 ################################################################################
-# SSH Host Key Signing
+# shutdown.service
 ################################################################################
 
 [Unit]
-Before=sshd.service
-Wants=sshd.service
-After=cloud-init.service
-Description=Runs SSH Host Key Signing
-
+DefaultDependencies=no
+Before=shutdown.target
+Description=Runs shutdown.sh
+  
 [Service]
 Type=oneshot
 User=root
 Group=root
-ExecStart=/usr/local/ami_setup/tailscale_scripts/sign-ssh-host-key.sh
+ExecStart=/usr/local/ami_setup/github_scripts/shutdown.sh
 
 [Install]
-WantedBy=multi-user.target
+WantedBy=halt.target reboot.target shutdown.target
