--- a/infra/amis/github_scripts/startup.service
+++ b/infra/amis/github_scripts/startup.service
@@ -1,18 +1,19 @@
 ################################################################################
-# SSH Host Key Signing
+# startup.service
 ################################################################################
 
 [Unit]
-Before=sshd.service
-Wants=sshd.service
-After=cloud-init.service
-Description=Runs SSH Host Key Signing
-
+Before=ssh.service
+Wants=network.target
+After=network.target
+Description=Runs startup.sh
+  
 [Service]
-Type=oneshot
+Type=simple
 User=root
 Group=root
-ExecStart=/usr/local/ami_setup/eks_scripts/sign-ssh-host-key.sh
+ExecStart=/usr/local/ami_setup/github_scripts/startup.sh
+Restart=on-failure
 
 [Install]
 WantedBy=multi-user.target
